# multi-agent-rl-robotics-isaaclab-ros2

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ros2-ci.yml
config/: arena_rules.yaml  scoring.yaml  target_layout.yaml
crc_robocup_vision_ws/: README.md
crc_robocup_vision_ws/src/rcvrl_behavior/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/rcvrl_behavior/config/: behavior.yaml
crc_robocup_vision_ws/src/rcvrl_behavior/src/: competition_behavior.cpp
crc_robocup_vision_ws/src/rcvrl_bringup/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/rcvrl_bringup/config/: sim2real.yaml
crc_robocup_vision_ws/src/rcvrl_bringup/launch/: competition.launch.py
crc_robocup_vision_ws/src/rcvrl_description/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/rcvrl_description/launch/: description.launch.py
crc_robocup_vision_ws/src/rcvrl_description/urdf/: robocup_visionrl_robot.urdf.xacro
crc_robocup_vision_ws/src/rcvrl_docs/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/rcvrl_interfaces/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/rcvrl_motion/: package.xml  setup.cfg  setup.py
crc_robocup_vision_ws/src/rcvrl_motion/config/: motion_drift.yaml
crc_robocup_vision_ws/src/rcvrl_motion/launch/: motion_drift_experiment.launch.py  motion_drift_sim_collection.launch.py
crc_robocup_vision_ws/src/rcvrl_motion/rcvrl_motion/: __init__.py  motion_drift_recorder.py  motion_drift_sim_source.py
crc_robocup_vision_ws/src/rcvrl_navigation/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/rcvrl_shooter/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/rcvrl_shooter/src/: shooter_controller.cpp
crc_robocup_vision_ws/src/rcvrl_vision/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/wvb_bringup/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/wvb_bringup/config/: sensor_fusion.yaml  sim2real.yaml  system.yaml
crc_robocup_vision_ws/src/wvb_bringup/launch/: competition.launch.py
crc_robocup_vision_ws/src/wvb_docs/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/wvb_docs/docs/: sim2real.md
crc_robocup_vision_ws/src/wvb_interfaces/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/wvb_interfaces/msg/: TargetDetection.msg
crc_robocup_vision_ws/src/wvb_navigation/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/wvb_navigation/config/: nav2_params.yaml  ros1_baseline.yaml  targets.elimination.blue.yaml  targets.elimination.yaml  targets.elimination.yellow.yaml  targets.qualifier.yaml
crc_robocup_vision_ws/src/wvb_navigation/launch/: navigation.launch.py  slam.launch.py
crc_robocup_vision_ws/src/wvb_shooter/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/wvb_shooter/config/: shooter.yaml
crc_robocup_vision_ws/src/wvb_vision/: CMakeLists.txt  package.xml
crc_robocup_vision_ws/src/wvb_vision/config/: vision.yaml
crc_robocup_vision_ws/src/wvb_vision/src/: apriltag_detector.cpp
docs/: admissions_project_brief.md  architecture.md  award_solution.md  capability_boundaries.md  evidence.md  getting_started.md  github_submission.md  large_scale_50v50_curriculum_plan.md  large_scale_50v50_plan.md  large_scale_50v50_report.md  migration.md  parameter_tuning.md  project_deep_dive.md  project_optimization_report.md  reproducibility.md  results.md  rl_contact_hull_fix_strict4.md  rl_convergence_report.md  rl_drshield_recessed_base_strict_audit.md  rl_dual_experts_contact_hull_seed260507_bluetuned_strict8.md  rl_dual_experts_contact_hull_seed260507_report.md  rl_dual_experts_contact_hull_seed260507_strict8.md  rl_dual_experts_recovery_cooldown_blend052_report.md  rl_dual_experts_recovery_cooldown_blend052_strict8.md  rl_dual_yellow_blue_experts_strict8.md  rl_dual_yellow_blue_experts_training_report.md  rl_engineering_hardening_report.md  rl_experiments.md  rl_expert_base_cap_rng_final_report.md  rl_expert_base_cap_rng_physical_boxes_strict8.md  rl_expert_base_cap_rng_seed10622_strict_audit.md  rl_expert_blue_gate_first_visual_hull_strict16.md  rl_expert_fair_base_window_visual_hull_strict64.md  rl_expert_fair_priority_push06_strict16.md  rl_expert_fair_push_escape_push06_strict16.md  rl_expert_fair_push_escape_push06_strict64.md  rl_expert_fair_push_escape_strict16.md  rl_expert_yellow3_blue2_visual_hull_strict16.md  rl_expert_yellow3_blue2_visual_hull_strict64.md  rl_expert_yellow3_blue2_yfast_visual_hull_strict16.md  (+38 more)
docs/figures/: README.md
docs/media/: README.md
docs/rl_data/: rule_geometry_audit.csv  rule_geometry_audit.json
isaaclab_sim/: README.md  large_scale_50v50_isaaclab_replay.py  robocup_visionrl_arena_sim.py
isaaclab_sim/rl/: README.md  __init__.py  audit_rule_geometry.py  build_balanced_dual_actor_policy.py  evaluate_fair_multiseed.py  evaluate_mappo_policy.py  evaluate_policy.py  evaluate_selfplay.py  evaluate_strategy_contract.py  evaluate_world_model_sacflow_policy.py  expert_policy.py  export_policy.py  export_world_model_sacflow_policy.py  generate_rl_figures.py  generate_sensorfusion_figures.py  inspect_usd_pushables.py  large_scale_50v50_battle.py  render_strict_replay_video.py  replay_buffer.py  replay_mappo_policy_strict.py  replay_policy_strict.py  requirements.txt  robocup_visionrl_gym_env.py  robocup_visionrl_selfplay_env.py  robocup_visionrl_selfplay_vec.py  run_fair_multiseed_training.sh  run_large_scale_curriculum.py  train_mappo_selfplay_parallel_torch.py  train_ppo_parallel_sb3.py  train_ppo_sb3.py  train_tactical_selfplay_numpy.py  train_world_model_sacflow_selfplay.py
scripts/: auto_commit_push.cmd  auto_commit_push.ps1  collect_ros2_motion_drift_recheck.sh  generate_paper_figures.py  make_narrated_three_view_video.py  make_readme_gifs.py  make_reviewer_4k_narrated_video.py  make_reviewer_expert_5min_video.py  make_reviewer_expert_video_v2.py  run_isaaclab_project.ps1  run_world_model_sacflow_training.sh  stop_project_isaaclab.ps1
tests/: conftest.py  test_rl_env_smoke.py  test_rl_strategy_contract.py  test_rule_gate.py  test_sim2real_config.py  test_target_config.py
(+152 files in other folders)
