<?xml version="1.0"?>
<package format="3">
  <name>rcvrl_behavior</name>
  <version>0.1.0</version>
  <description>Competition behavior state machine for RoboCup VisionRL.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>rcvrl_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
