<?xml version="1.0"?>
<package format="3">
  <name>rcvrl_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch package for RoboCup VisionRL.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rcvrl_behavior</exec_depend>
  <exec_depend>rcvrl_description</exec_depend>
  <exec_depend>rcvrl_navigation</exec_depend>
  <exec_depend>rcvrl_motion</exec_depend>
  <exec_depend>rcvrl_shooter</exec_depend>
  <exec_depend>rcvrl_vision</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
