<?xml version="1.0"?>
<package format="3">
  <name>rcvrl_description</name>
  <version>0.1.0</version>
  <description>Robot description and TF frames for RoboCup VisionRL.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
