<?xml version="1.0"?>
<package format="3">
  <name>rcvrl_motion</name>
  <version>0.1.0</version>
  <description>ROS2 motion telemetry and drift recorder ported from the Mini ROS1 motion stack.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
