<?xml version="1.0"?>
<package format="3">
  <name>rcvrl_shooter</name>
  <version>0.1.0</version>
  <description>ROS2 serial controller for the fixed laser shooter module.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
