<?xml version="1.0"?>
<package format="3">
  <name>wvb_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch package for RoboCup VisionRL.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>wvb_behavior</exec_depend>
  <exec_depend>wvb_description</exec_depend>
  <exec_depend>wvb_navigation</exec_depend>
  <exec_depend>wvb_shooter</exec_depend>
  <exec_depend>wvb_vision</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
