<?xml version="1.0"?>
<package format="3">
  <name>wvb_docs</name>
  <version>0.1.0</version>
  <description>Portfolio documentation for RoboCup VisionRL.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
