<?xml version="1.0"?>
<package format="3">
  <name>wvb_navigation</name>
  <version>0.1.0</version>
  <description>Navigation configuration, maps and target routes for RoboCup VisionRL.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
