<?xml version="1.0"?>
<package format="3">
  <name>wvb_vision</name>
  <version>0.1.0</version>
  <description>AprilTag-based visual target perception for RoboCup VisionRL.</description>
  <maintainer email="portfolio@example.com">RoboCup VisionRL Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>tf2</depend>
  <depend>wvb_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
